# zero-to-prod

./: .env  Cargo.toml
.github/workflows/: general.yml
migrations/: 20230309214726_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
